patch for freemium cluster
